# tracking_robot

./: Dockerfile  LICENSE  README.md  context_publisher.py  controller.py  docker-compose.yml  frame_publisher.py  inferencing.py  main.py  pipeline.py  prediction_publisher.py  requirements.txt  runtime_config.py  state_machine.py  utils.py  visualization.py  web_dashboard.py
.devcontainer/: devcontainer.json
deploy/: tracking-robot.service
install/: setup.sh
install/robot_msgs/share/robot_msgs/: local_setup.sh  package.ps1  package.sh
install/robot_msgs/share/robot_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_robot_msgs__rosidl_generator_cExport.cmake  export_robot_msgs__rosidl_generator_cppExport.cmake  export_robot_msgs__rosidl_generator_pyExport.cmake  export_robot_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_robot_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  robot_msgsConfig.cmake  robot_msgs__rosidl_typesupport_cExport.cmake  robot_msgs__rosidl_typesupport_cppExport.cmake  robot_msgs__rosidl_typesupport_introspection_cExport.cmake  robot_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/robot_msgs/share/robot_msgs/msg/: Context.idl  Context.msg  Hand.idl  Landmark.idl  Person.idl  PersonState.idl  Prediction.idl
install/robot_msgs/share/robot_msgs/rust/: Cargo.toml
log/: latest_build
models/: model_trt.engine
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: Context.msg  Hand.msg  HandState.msg  Person.msg  PersonState.msg  Prediction.msg  RobotState.msg
(+100 files in other folders)
